--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>javassist-plus</artifactId>
-	<version>1.0.3.RELEASE</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<description>javassist plus</description>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
